# cpp_nn

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  build.zig  build.zig.zon  download_mnist_dataset.sh  justfile  vcpkg-configuration.json  vcpkg.json
mnist/: CMakeLists.txt
mnist/include/: idx.h
mnist/src/: idx.cpp
mnist_cli/: CMakeLists.txt
mnist_cli/include/: app.h  cli.h  key.h
mnist_cli/src/: app.cpp  cli.cpp  key.cpp  main.cpp
mnist_web/server/: CMakeLists.txt
mnist_web/server/include/: api.h  app.h  db.h  state.h
mnist_web/server/src/: app.cpp  db.cpp  main.cpp
mnist_web/server/src/api/: network.cpp
mnist_web/ui/: .gitignore  index.html  package.json
mnist_web/ui/src/: index.css  index.tsx
mnist_web/ui/src/components/: CreateNetworkModal.tsx  DeleteNetworkConfirm.tsx  NetworkComponent.tsx
mnist_web/ui/src/data/: network.ts
mnist_web/ui/src/data/temp/: networks.ts
mnist_web/ui/src/pages/: netwokrs.tsx
nn_lib/: CMakeLists.txt
nn_lib/include/: activation.h  network.h  nn.h
nn_lib/include/nn/: layer.h  math.h  matrix.h  nn.h  types.h
nn_lib/include/nn_lib/: activation.hpp  loss.hpp  network.hpp
nn_lib/src/: activation.cpp  layer.cpp  lib.cpp  loss.cpp  math.cpp  matrix.cpp  network.cpp  nn.cpp  types.cpp
nn_lib/test/: test.cpp  xor.cpp
nn_web/preprocess/: CMakeLists.txt  main.cpp
nn_web/preprocess/include/: cli.hpp  idx.hpp
nn_web/preprocess/src/: cli.cpp  idx.cpp  main.cpp
nn_web/server/: CMakeLists.txt
nn_web/server/include/: app.h  app.hpp  db.h  db.hpp  memmat.hpp  state.h  state.hpp
nn_web/server/src/: app.cpp  db.cpp  idx.cpp  main.cpp  memmat.cpp  state.cpp
nn_web/ui/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
nn_web/ui/src/: App.svelte  app.css  router.ts
nn_web/ui/src/lib/: types.ts  utils.ts
nn_web/ui/src/lib/components/: Button.svelte  Card.svelte  CreateNetworkDialog.svelte  CreateNetworkModal.svelte  NetworkSummary.svelte  NetworkTester.svelte  NetworkTrainer.svelte  Prediction.svelte  Select.svelte
nn_web/ui/src/lib/components/network/: NetworkActions.svelte  NetworkArchitecture.svelte  NetworkCard.svelte  NetworkStats.svelte
nn_web/ui/src/lib/components/networkCard/: Actions.svelte  Architecture.svelte  Card.svelte  Stats.svelte
nn_web/ui/src/lib/data/: common.ts  layer.ts  network.svelte.ts  network.ts  networks.svelte.ts  predict.svelte.ts  prediction.svelte.ts
nn_web/ui/src/routes/: NetworkDetails.svelte  Networks.svelte
nnet/: CMakeLists.txt
nnet/include/: channel.h  math.h  nn.h  train_pool.h
nnet/src/: idx.cpp  nn.cpp  train_pool.cpp
